--- a/style.css
+++ b/style.css
@@ -38,18 +38,22 @@ body {
         transform: rotateX(360deg) rotateY(360deg);
     }
 }
+.cube:hover {
+    animation-play-state: paused;
+}
 
 .side {
     position: absolute;
     box-sizing: border-box;
-    margin: 0;
-    width: 300px;
-    height: 300px;
+    margin: 25px;
+    width: 250px;
+    height: 250px;
     border: 5px solid #00ff00;
     font-size: 60px;
     text-align: center;
     line-height: 250px;
     background-color: #00000066;
+    border-radius: 50px;
 }
 
 .front {
